<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button_background"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/close_button_background"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/filter_dialog_button_background"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/blue" />

</LinearLayout>