<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/filter_start_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/login_edittext_background"
        android:gravity="center"
        android:text="@string/filter_start_date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/filter_date_to"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/filter_end_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:gravity="center"
        android:text="@string/filter_end_date" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background">

        <Spinner
            android:id="@+id/filter_chart_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/filter_chart_type_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableEnd="@mipmap/down_arrow"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/blue"
            android:textSize="13sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filter_chart_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/filter_dialog_button_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/filter_chart_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/filter_dialog_button_background"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/blue" />


    </LinearLayout>
</LinearLayout>