<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter_title"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background">

        <Spinner
            android:id="@+id/filter_status_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/filter_status_spinner_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableEnd="@mipmap/down_arrow"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/blue"
            android:textSize="13sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background">

        <Spinner
            android:id="@+id/filter_domain_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/filter_domain_spinner_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableEnd="@mipmap/down_arrow"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/blue"
            android:textSize="13sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/code_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/short_code"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/redirect_url_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/redirecing_url"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/short_url_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/short_url"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/desc_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/description_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />


    <EditText
        android:id="@+id/tags_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/tagss"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/title_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background">

        <Spinner
            android:id="@+id/filter_sort_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/filter_sort_spinner_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableEnd="@mipmap/down_arrow"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/blue"
            android:textSize="13sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filter_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/filter_dialog_button_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/filter_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/filter_dialog_button_background"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/blue" />


    </LinearLayout>


</LinearLayout>